--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -506,7 +506,7 @@
   "DarkHideInfo": "Your kills cause power outages",
   "WorkaholicInfo": "Finish all tasks to solo win!",
   "CollectorInfo": "Collect votes from players",
-  "ProvocateurInfo": "Victory with help target",
+  "ProvocateurInfo": "Win if your target loses",
   "BloodKnightInfo": "Killing gives you a temporary shield",
   "PlagueBearerInfo": "Plague everyone to turn into <color=#343136>Pestilence</color>",
   "PestilenceInfo": "You're unstoppable",
