--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3336,6 +3336,7 @@
   "Allergic.Time": "Time in which the allergy level goes from 0% to 100%",
   "Allergic.Range": "Maximum distance from the target that is considered nearby",
   "Allergic.Suffix": "<#ffff44><size=80%>Allergy Level:</color> {0}%</size>",
+  "BetrayalAddonsCanGuess": "Players With <#ffab1b>Betrayal Add-ons</color> Can Guess",
   "Enigma": "Enigma",
   "EnigmaInfo": "Get Clues about Killers",
   "EnigmaInfoLong": "(Crewmates):\\nAs the Enigma, you get a random clue about the killer each meeting, depending on the setting, you may have to report the body to receive a clue. The more tasks you complete the preciser the clues get.\\n\\n<size=70%><u><b>Light colors:</b></u> Red, Pink, Orange, Yellow, White, Cyan, Lime, Rose, Banana, Coral\\n<u><b>Dark colors:</b></u> Blue, Green, Black, Purple, Brown, Maroon, Gray, Tan</size>",
