--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2398,6 +2398,100 @@
   "LoadingHint.43": "Did you know that you can't know everything?",
   "LoadingHint.44": "Did you know?\nThe Dev's favorite number is 44",
   "LoadingHint.45": "Did you know that you can use the yield statement in an iterator to provide the next value or signal the end of an iteration in a loop since async doesn't work in BepInEx?\nYeah, me neither",
+  "Achievement.IdeasLiveOn.Description": "As Undead, win with at least 3 Necromancers",
+  "Achievement.HowCouldIBelieveThem.Description": "Vote for Jester that was ejected",
+  "Achievement.WhatKindOfGeniusCameUpWithThisRoleIdea.Description": "Get Dad role",
+  "Achievement.StabbingTheBack.Description": "Kill a Crewmate as Backstabber",
+  "Achievement.Honk.Description": "Drag someone as Goose",
+  "Achievement.Bruh.Description": "Get vanilla Crewmate role",
+  "Achievement.HowDoICraftThisAgain.Description": "Craft something as Adventurer",
+  "Achievement.ImCrewISwear.Description": "Kill the last Impostor with all Neutral Killers dead",
+  "Achievement.Covid20.Description": "Infect 2 people as Virus",
+  "Achievement.TheresThisGameMyDadTaughtMeItsCalledSwitch.Description": "Swap as or be Swapped by Shifter at least 3 times in one round",
+  "Achievement.FirstDayOnTheJob.Description": "As an Amnesiac, remember that you were a Sidekick or Deathknight",
+  "Achievement.UnderNewManagement.Description": "As an Amnesiac, remember that you were a Cultist or Virus",
+  "Achievement.OutOfTime.Description": "Suicide or lose due to a time limit",
+  "Achievement.TooCold.Description": "Get frozen by Freezer, Beartrap, etc.",
+  "Achievement.APerfectTimeToRewindIt.Description": "Rewind time as Time Master",
+  "Achievement.SerialKiller.Description": "Kill everyone in FFA mode",
+  "Achievement.PVPMaster.Description": "Win in Solo PVP mode",
+  "Achievement.HarderThanDrivingThroughTrafficLightsRight.Description": "Win in Stop and Go mode",
+  "Achievement.TwoFast4You.Description": "Win in Speedrun mode",
+  "Achievement.TooHotForMe.Description": "Win in Hot Potato mode",
+  "Achievement.SeekAndHide.Description": "Win in Hide and Seek mode",
+  "Achievement.Two012.Description": "Win in Natural Disasters mode",
+  "Achievement.YourFlagIsMine.Description": "Win in Capture The Flag mode",
+  "Achievement.BestReactionTime.Description": "Win in Room Rush mode",
+  "Achievement.KimJongUnExperience.Description": "Vote for someone as Dictator",
+  "Achievement.ImUnstoppable.Description": "Get Medic's shield as Snitch",
+  "Achievement.ThereCanOnlyBeOne.Description": "Kill someone who had the same role as you",
+  "Achievement.CantTouchThis.Description": "As Detour, redirect at least 3 interactions",
+  "Achievement.ItsMorbinTime.Description": "Shapeshift into someone",
+  "Achievement.WhatHaveIDone.Description": "Kill your Lover, Romantic, Lawyer or Follower",
+  "Achievement.BetrayalLevel100.Description": "Kill Madmate as Impostor or Impostor as Madmate",
+  "Achievement.TheRealTraitor.Description": "Kill renegade as traitor (the neutral one)",
+  "Achievement.DiePleaseDie.Description": "Try to kill the same player with Medic's shield 2 times, both unsuccessfully",
+  "Achievement.MasterDetective.Description": "As Crewmate, vote only for Impostors and Neutral Killers",
+  "Achievement.Superhero.Description": "Kill all Impostors (including Renegade and Parasite) and Neutral Killers alone as Sheriff",
+  "Achievement.TheKillingMachine2Point0.Description": "Kill >= 7 players in the same game as Impostor/Neutral Killer",
+  "Achievement.ALightInTheShadows.Description": "Walk near the Beacon during the lights sabotage so they increase your vision",
+  "Achievement.IForgotThisRoleExists.Description": "Try to kill someone who is protected by Guardian Angel",
+  "Achievement.TheLastSurvivor.Description": "Win as a Crewmate, when you are the only alive player left",
+  "Achievement.YouDidTheExactOppositeOfWhatYouWereSupposedToDo.Description": "Die first as Maverick or Opportunist",
+  "Achievement.WheresTheBlueShell.Description": "Finish second in Room Rush",
+  "Achievement.InnocentKiller.Description": "Kill someone without having a kill button",
+  "Achievement.YouWontTellAnyone.Description": "Silence Snitch with all tasks done as Silencer",
+  "Achievement.ExpertControl.Description": "As Spurt, avoid reaching 0% and 100% speed for a round (If it was only to avoid 0 then they could just afk. Having to avoid both forces them to keep moving)",
+  "Achievement.YoureMyFriendNow.Description": "Recruit anyone as Gangster/Jackal/Infection/Virus/Cultist",
+  "Achievement.ThatWasClose.Description": "As a killer, kill Snitch with all their tasks done (or when Snitch is revealed)",
+  "Achievement.CrewHero.Description": "As Snitch, complete all your tasks, eject all Impostors and Neutral Killers, be alive until the end and win with crewmates",
+  "Achievement.Transformer.Description": "Complete at least 3 transformations in the same game (transformation is changing roles. For example Amnesiac => Sheriff => Sidekick)",
+  "Achievement.InnocentImpostor.Description": "Win as Impostor, not making any kill",
+  "Achievement.ImpostorGang.Description": "Win as Impostor with all your partners alive",
+  "Achievement.FuriousAvenger.Description": "Find yourself in a situation when Butcher kills Avenger and everyone dies",
+  "Achievement.BrainStorm.Description": "Get rid of all killers as a Crewmate and win with crewmates in less than 3 meetings (there must be at least 2 killers at the start of the game)",
+  "Achievement.NothingCanStopLove.Description": "Win as Lover/Loving Impostor with your partner alone (not with other teams)",
+  "Achievement.SimonSays.Description": "Complete the Simon's instruction",
+  "Achievement.Unsuspected.Description": "Win a game as a killer, not being voted by anyone in all meetings",
+  "Achievement.YoureTooLate.Description": "As Pestilence, have a killer try to kill you, but unsuccessfully for them",
+  "Achievement.Armageddon.Description": "Survive the Tremor's doom",
+  "Achievement.GetDownMrPresident.Description": "Protect the President as the Bodyguard",
+  "Achievement.EconomicCompetition.Description": "Kill Merchant as Bargainer, or kill Bargainer as Merchant",
+  "Achievement.Gotcha.Description": "Kill Bait and then get ejected",
+  "Achievement.Speedrun.Description": "Have a game end in under 1 minute",
+  "Achievement.Carried.Description": "Win as a madmate while the other impostors are dead",
+  "Achievement.SorryToBurstYourBubble.Description": "Explode 5 people with 1 encased player as the Bubble",
+  "Achievement.GetLynched.Description": "Successfully guess 3 roles as lyncher",
+  "Achievement.FlagMaster.Description": "Carry the flag the longest in CTF",
+  "Achievement.Tag.Description": "Tag the most players in CTF",
+  "Achievement.Vectory.Description": "Vent 50 times in one game",
+  "Achievement.Bloodbath.Description": "Kill 8 people in the same game as Killing Machine",
+  "Achievement.AntiSaboteur.Description": "Fix all types of sabotages (Reactor, o2, Lights, Comms) as Technician (not necessarily in the same game)",
+  "Achievement.TheBestInSchool.Description": "Be the first who answer the Mathematician's question correctly",
+  "Achievement.Awww.Description": "Drag Penguin as Goose (this achievement is gain after the game end)",
+  "Achievement.Ohhh.Description": "Drag Goose as Penguin (this achievement is gain after the game end)",
+  "Achievement.Hypnosis.Description": "Try to report a dead body during the Hypnotist's ability",
+  "Achievement.Mimicry.Description": "Change your appearance at least 3 times as a Doppelgänger",
+  "Achievement.P2W.Description": "Buy all items as Bargainer and win in the same game",
+  "Achievement.LuckOrObservation.Description": "Guess 1 player correctly",
+  "Achievement.BeginnerGuesser.Description": "Guess 2 players correctly in the same game",
+  "Achievement.GuessMaster.Description": "Guess 4 players correctly in the same game",
+  "Achievement.BestGuesserAward.Description": "Guess 6 players correctly in the same game",
+  "Achievement.BadLuckOrBadObservation.Description": "Guess incorrectly and die",
+  "Achievement.Duel.Description": "Find yourself in a situation when you are 1vs1 against another killer",
+  "Achievement.Delicious.Description": "Get Donut Delivery's donut or a Chef's dish",
+  "Achievement.Inquisition.Description": "Kill Vampire/Witch/Warlock/Hex Master as Crusader",
+  "Achievement.Censorship.Description": "Silence 5 people in the same game as Silencer",
+  "Achievement.LiarLiar.Description": "As Lawyer, fail to protect your client that is crewmate, and then win with impostors somehow",
+  "Achievement.IWishIReported.Description": "Revive an Impostor/Converted Crewmate/Neutral Killer as Altruist",
+  "Achievement.WellMeetAgainSomeSunnyDay.Description": "Mark someone as Hookshot",
+  "Achievement.AndForWhatDidICodeTheseCommandsForIfYouDontUseThemAtAll.Description": "Don't use any command for an entire game",
+  "Achievement.Prankster.Description": "Shapeshift as Disco",
+  "Achievement.WhatTheHell.Description": "Type 666 in chat as Demon. Will others notice this? >:)",
+  "Achievement.WhyJustWhy.Description": "As Dictator, vote out the Jester",
+  "Achievement.CommonEnemyNo1.Description": "Win as any NK",
+  "Achievement.CoordinatedAttack.Description": "As Jester, Executioner or Innocent, win with any of the other 2 roles",
+  "Achievement.ItsJustAPrankBro.Description": "As Bomber, Kill half the lobby in 1 bomb",
   "Vision": "Vision",
   "Outside": "Outside",
   "UnsupportedVersion": "Unsupported Among Us version.\\nPlease update Among Us.",
