--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4290,8 +4290,10 @@
   "MoveAndStop_MiddleCounterRedMax": "Middle Counter Maximum Red Time",
   "MoveAndStop_ExtraGreenTimeOnAirship": "Extra Green Time On AirShip",
   "MoveAndStop_ExtraGreenTimeOnFungle": "Extra Green Time On Fungle",
+  "MoveAndStop_PlayerLives": "Player Lives",
   "MoveAndStop_EnableTutorial": "Enable Tutorial",
-  "MoveAndStop_Tutorial": "<size=80%><#ffffff><size=100%>Stop on red lights</size>\\nOnly move in directions where you see a green arrow\\n● indicates up and down\\nThe timers indicate when the color changes\\nYellow means the light will turn red, so stop moving\\nOrange means the light will turn green, but do not move yet\\nFinish your tasks to win</color></size>",
+  "MoveAndStop_Tutorial": "<size=80%><#ffffff><size=100%>Stop on red lights</size>\\nOnly move in directions where you see a green arrow\\nThe timers indicate when the color changes\\nYellow means the light will turn red, so stop moving\\nOrange means the light will turn green, but do not move yet\\nFinish your tasks to win</color></size>",
+  "MoveAndStop_LivesRemainingNotify": "<size=2><#ffff00>⚠ YOU LOST A LIFE | <#ffff44>{0}</color> REMAINING ⚠</color></size>",
   "Tasker": "Tasker",
   "TaskerInfo": "FINISH TASKS FIRST TO WIN",
   "TaskerInfoLong": "FINISH TASKS FIRST TO WIN",
