--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2261,6 +2261,7 @@
   "CommandDescription.ReadyCheck": "Start a ready check (check who is AFK) (results displayed after 30s)",
   "CommandDescription.Ready": "Mark yourself as ready",
   "CommandDescription.EnableAllRoles": "Enables all roles and add-ons (⚠ freezes the game for a few seconds ⚠)",
+  "CommandDescription.Achievements": "See which achievements you have unlocked and which you haven't",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2398,6 +2399,8 @@
   "LoadingHint.43": "Did you know that you can't know everything?",
   "LoadingHint.44": "Did you know?\nThe Dev's favorite number is 44",
   "LoadingHint.45": "Did you know that you can use the yield statement in an iterator to provide the next value or signal the end of an iteration in a loop since async doesn't work in BepInEx?\nYeah, me neither",
+  "CompletedAchievementsTitle": "<#FAD101>COMPLETED ACHIEVEMENTS</color>",
+  "IncompleteAchievementsTitle": "<#ff0000>ACHIEVEMENTS TO BE UNLOCKED</color>",
   "AchievementCompletedTitle": "<#FAD101>ACHIEVEMENT UNLOCKED</color>",
   "Achievement.IdeasLiveOn": "Ideas Live On",
   "Achievement.HowCouldIBelieveThem": "How Could I Believe Them?!",
