--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3981,6 +3981,9 @@
   "BackstabberTeam.NK": "a <#ffab1b>Neutral Killer</color>",
   "Backstabber.RevealAfterKilling": "Revealed after killing",
   "GuessBackstabber": "You cannot guess a revealed Backstabber.",
+  "Curser": "Curser",
+  "CurserInfo": "Make Others' Life Worse",
+  "CurserInfoLong": "(Impostors):\\nAs the Curser, when you use your kill button on someone, they will get one of the following:<size=80%>\\n- -1 ability use\\n- +1 harmful add-on\\n- permanent low vision\\n- permanent low speed</size>\\nYou win if crewmates lose.",
   "Postman": "Postman",
   "PostmanInfo": "Deliver Mail to Everyone!",
   "PostmanInfoLong": "(Neutral):\\nAs the Postman, your job is to deliver mail to everyone. You'll always have a target, and you need to click your kill button on that target to deliver the mail to them. When you've delivered mail to everyone, your win condition is satisfied. You'll win with the winning team, no matter what happens.",
@@ -4644,6 +4647,10 @@
   "SpurtModule": "Speed Modulator",
   "EnableSpurtCharge": "Display The Charge",
   "SpurtSuffix": "\\n« <color=#c9e8f5>Spurt</color>: {0}% »",
+  "Fragile": "Fragile",
+  "FragileInfo": "Everything Kills You",
+  "FragileInfoLong": "(Add-ons):\\nAs the Fragile, even if someone uses their kill button on you with a non-killing intent, they'll kill you anyway.",
+  "Prefix.Fragile": "Fragile",
   "Nimble": "Nimble",
   "NimbleInfo": "Grants Vent Access",
   "NimbleInfoLong": "(Add-ons):\\nGrants Vent Access for Crewmate Roles.",
