fix CTA lag, fix TextBoxTMP issues (thanks: Discussions & PL), add some settings

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -828,6 +828,13 @@
   "DisableMeeting": "Disable Meetings",
   "DisableCloseDoor": "Disable Doors sabotage",
   "DisableSabotage": "Disable Sabotages",
+  "DisableReactorOnSkeldAndMira": "Disable Reactor Sabotage (The Skeld & MIRA HQ)",
+  "DisableReactorOnPolus": "Disable Reset Seismic Stabilizers Sabotage (Polus)",
+  "DisableReactorOnAirship": "Disable Avert Crash Course Sabotage (AirShip)",
+  "DisableO2": "Disable O2 Sabotage (The Skeld & MIRA HQ)",
+  "DisableComms": "Disable Comms Sabotage",
+  "DisableLights": "Disable Lights Sabotage",
+  "DisableMushroomMixup": "Disable Mushroom Mixup Sabotage (The Fungle)",
   "ShowAntiBlackoutWarning": "Show Anti-Blackout Warning When the Ejection Screen is Overridden",
   "NoGameEnd": "No Game End",
   "AllowConsole": "Console",
