--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2269,6 +2269,7 @@
   "CommandDescription.Ready": "Mark yourself as ready",
   "CommandDescription.EnableAllRoles": "Enables all roles and add-ons (⚠ freezes the game for a few seconds ⚠)",
   "CommandDescription.Achievements": "See which achievements you have unlocked and which you haven't",
+  "CommandDescription.DeathNote": "Guess someone's real name as the Note Killer.",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2335,6 +2336,7 @@
   "CommandArgs.Mute.Duration": "The duration in seconds (leaving blank => 60s)",
   "CommandArgs.Unmute.Id": "The player's ID to unmute",
   "CommandArgs.Draft.Number": "The number of the role to choose",
+  "CommandArgs.DeathNote.Name": "The real name to guess. If it's correct, you kill the player with this name.",
   "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
   "PollResultTitle": "Poll Results",
   "Poll.Title": "<#ff0000>➡ POLL ⬅</color>",
@@ -2625,7 +2627,7 @@
   "ERR-002-000-3": "Your Among Us version is outdated.",
   "ERR-002-000-2": "You're using an unsupported map, i.e. Submerged.",
   "DraftNotEnoughRoles": "There are not enough roles enabled to choose from, so drafting cannot be started. Please enable more roles and try again.",
-  "DraftStart": "Drafting has started! You now have a change to pick a role from the list below if you'd like to get one of them for the next game. The roles you get to choose from, with their indexes, are:\\n\\n{0}\\n\\nTo pick one of these, simply type <b>/draft [index]</b> in the chat, replacing [index] with the number of the role you want to pick.\\nIf you don't pick a role, you get a random one like you normally would.",
+  "DraftStart": "Drafting has started! You now have a chance to pick a role from the list below if you'd like to get one of them for the next game. The roles you get to choose from, with their indexes, are:\\n\\n{0}\\n\\nTo pick one of these, simply type <b>/draft [index]</b> in the chat, replacing [index] with the number of the role you want to pick.\\nIf you don't pick a role, you get a random one like you normally would.",
   "DraftTitle": "<#00a5ff>➡</color> <#00ffa5>Drafting</color> <#00a5ff>⬅</color>",
   "DraftChosen": "You have chosen the <b>{0}</b> role for the next game.\\n<size=70%>You can still change your choice by typing /draft [index] again.</size>",
   "DeathCommand": "<#ffffff>You were killed by </color>{0}<#ffffff>\\nTheir role is </color>{1}",
@@ -4122,7 +4124,15 @@
   "NoteKillerInfoLong": "(Neutrals):\\nAs the Note Killer, you can pet/unshift to see a part of everyone's real names for a few seconds. This has a cooldown. If you find someone's full real name, you can use <b>/dn {realname}</b>, replacing {realname} with the name you've found. If that name is correct, the game will instantly kill the player whose real name you've entered.\\n\\nEveryone knows you're in the game and everyone sees their own real name.",
   "NoteKiller.NumLettersRevealed": "Number of Letters Revealed From Each Name",
   "NoteKiller.ClueShowDuration": "Clue Show Duration",
+  "NoteKiller.WinCondition": "Win Condition",
+  "NKWC.LastStanding": "Last One Standing",
+  "NKWC.XKills": "Kill X Players",
+  "NoteKiller.NumPlayersToKill": "Number of Players to Kill (X =)",
   "NoteKiller.OthersSelfSuffix": "<size=70%>There's a {0} in the game. Your real name is <#00ffa5>{1}</color></size>",
+  "DeathNoteCommand.WrongName": "You've entered the wrong name.",
+  "DeathNoteCommand.PlayerNotFoundOrDead": "The player with this name was not found or is already dead.",
+  "DeathNoteCommand.Success": "Success! {0} was killed.",
+  "DeathNoteCommand.SuccessForOthers": "{0} was killed by the Note Killer.",
   "Imitator": "Imitator",
   "ImitatorInfo": "Your kill cooldown shifts",
   "ImitatorInfoLong": "(Neutral):\\nAs the Imitator, your kill cooldown is different after every even numbered kill and every odd numbered kill of yours. You have a separate cooldown after meetings. Your first kill after every meeting will set your cooldown to the Even-Numbered Kill Cooldown, your second kill will set it to the Odd-Numbered Kill Cooldown, and the process repeats until a meeting is called again.",
