--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4647,6 +4647,9 @@
   "Wizard.MaxSpeedValue": "Minimum Speed that can be given to players",
   "Wizard.MaxVisionValue": "Minimum Vision that can be given to players",
   "Wizard.MaxKCDValue": "Maximum Kill Cooldown that can be given to players",
+  "Wizard.SpeedStep": "Step in which Speed is increased",
+  "Wizard.VisionStep": "Step in which Vision is increased",
+  "Wizard.KCDStep": "Step in which Kill Cooldown is increased",
   "Oxyman": "Oxyman",
   "OxymanInfo": "Your Oxygen Level Affects Everything",
   "OxymanInfoLong": "(Crewmates):\\nAs the Oxyman, you have an Oxygen level below your name. The Oxygen level decreases overtime. You have to vent to increase your Oxygen. If the Oxygen level reaches 0%, you die. If it's very low, you're blind. If it's low, you're slower. If it's high, you're faster. If it's very high, you're invulnerable.",
