--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3082,6 +3082,25 @@
   "Wasp.PestControlSpeed": "Speed During Pest Control",
   "Wasp.PestControlVision": "Vision During Pest Control",
   "Wasp.SwarmModeSuffix": "<#ffff00>You've been attacked and entered swarm mode for {0} seconds!</color>",
+  "Occultist": "Occultist",
+  "OccultistInfo": "Revive Players To Your Team",
+  "OccultistInfoLong": "(Impostors):\\nAs the Occultist, you have 2 modes: reporting and reviving. In report mode, you report bodies normally. In revive mode, when you press report on someone's body, you'll revive them and they'll turn into Renegade / get the Madmate add-on (if they weren't an impostor).",
+  "Occultist.ReviveTime": "Delay between pressing report and the player being revived",
+  "Occultist.ArrowsToBodies": "Has arrows toward bodies",
+  "Occultist.RevivedPlayersBodiesCanBeReported": "Revived players' bodies can be reported",
+  "Occultist.RevivedPlayers": "Revived Players",
+  "Occultist.RPM.Renegade": "Turn Into <#ff1919>Renegade</color>",
+  "Occultist.RPM.Madmate": "Get The <#ff1919>Madmate</color> Add-on",
+  "Occultist.CanReviveImpostorsAndMadmates": "Can revive <#ff1919>Impostors</color> and <#ff1919>Madmates</color>",
+  "RevivedByOccultist": "<#ffff00><size=150%>You've been revived by the <color=#ff1919>Occultist</color>!</size>\\nYou are now on the <color=#ff1919>Impostor</color> team.</color>",
+  "OccultistSuffix": "<size=80%><#00ffa5>Mode:</color> <b>{0}</b> (<#00a5ff>{1}</color> to switch mode)</size>",
+  "OccultistMode.Revive": "Revive",
+  "OccultistMode.Report": "Report",
+  "OccultistActionSwitchMode.Vent": "Vent",
+  "OccultistActionSwitchMode.Pet": "Pet",
+  "OccultistActionSwitchMode.Unshift": "Unshift",
+  "OccultistReviving": "Reviving {0}....",
+  "OccultistRevived": "{0} has been revived!",
   "Swapster": "Swapster",
   "SwapsterInfo": "Swap Players",
   "SwapsterInfoLong": "(Impostors):\\nAs the Swapster, you can select 2 players using your shapeshift menu to swap them.",
