--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4059,6 +4059,9 @@
   "CurserInfoLong": "(Impostors):\\nAs the Curser, when you use your kill button on someone, they will get one of the following:<size=80%>\\n- -1 ability use\\n- +1 harmful add-on\\n- permanent low vision\\n- permanent low speed</size>\\nYou win if crewmates lose.",
   "Curser.LowerVision": "Permanent Lower Vision",
   "Curser.LowerSpeed": "Permanent Lower Speed",
+  "Weatherman": "Weatherman",
+  "WeathermanInfo": "Spawn Natural Disasters",
+  "WeathermanInfoLong": "(Neutrals):\\nAs the Weatherman, you can spawn a random natural disaster by using your pet/unshift button. The disasters are the same as in the Natural Disasters game mode.\\n\\nUse these disasters to kill everyone to win!",
   "Postman": "Postman",
   "PostmanInfo": "Deliver Mail to Everyone!",
   "PostmanInfoLong": "(Neutral):\\nAs the Postman, your job is to deliver mail to everyone. You'll always have a target, and you need to click your kill button on that target to deliver the mail to them. When you've delivered mail to everyone, your win condition is satisfied. You'll win with the winning team, no matter what happens.",
