--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1129,6 +1129,14 @@
   "AirshipAdditionalSpawn": "Additional Spawn Locations (Airship)",
   "CommsCamouflage": "Camouflage during Comms Sabotage",
   "CommsCamouflageDisableOnFungle": "Disable on Fungle",
+  "CommsCamouflageLimit": "Limit",
+  "CommsCamouflageLimitSetChance": "Set Chance of Camouflaging (each time Comms are sabotaged)",
+  "CommsCamouflageLimitChance": "Chance of Camouflaging",
+  "CommsCamouflageLimitSetFrequency": "Set Frequency of Camouflaging (= only camouflage every x sabotages)",
+  "CommsCamouflageLimitFrequency": "Frequency of Camouflaging",
+  "CommsCamouflageLimitSetMaxTimes": "Set Maximum Times of Camouflaging",
+  "CommsCamouflageLimitMaxTimesPerGame": "Maximum Times of Camouflaging Per Game",
+  "CommsCamouflageLimitMaxTimesPerRound": "Maximum Times of Camouflaging Per Round",
   "DisableReportWhenCC": "Disable body reporting while camouflaged",
   "EnableDebugMode": "Enable Debug Mode",
   "ChangeNameToRoleInfo": "Show Role Info to Unmodded Clients Round 1",
@@ -2111,6 +2119,8 @@
   "WraithInvisInCooldown": "Ability still on cooldown, vanish failed",
   "WraithInvisStateCountdown": "<color=#00ffa5>Invisibility expires in</color> <b>{0}</b>s",
   "WraithInvisCooldownRemain": "<color=#00ffa5>CD:</color> <b>{0}</b>s",
+  "AntiBlackoutSkipTasks": "<#ffff00>⚠ Anti-Blackout processing in progress ⚠</color>",
+  "CanGetImpostorOnlyAddons": "Can get <#ff1919>Impostor-only</color> add-ons",
   "BKInProtect": "Currently immortal",
   "BKProtectOut": "Shield expired",
   "BKSkillTimeRemain": "<color=#00ffa5>You're immune for</color> <b>{0}</b>s",
@@ -3316,6 +3326,9 @@
   "Leery.ShowProgress": "Show Progress",
   "LeeryNotify": "<#ffff00>The nearest player is not a crewmate!</color>",
   "LeerySuffix": "<size=80%>Investigating {0}....</size>",
+  "Ankylosaurus": "Ankylosaurus",
+  "AnkylosaurusInfo": "You're an Ankylosaurus.... I guess",
+  "AnkylosaurusInfoLong": "(Crewmates):\\nAs the Ankylosaurus, you cannot be guessed, your movement is slower, you have a lower vision, and you have multiple lives.",
   "Hypnotist": "Hypnotist",
   "HypnotistInfo": "Prevent Body Reports",
   "HypnotistInfoLong": "(Impostors):\\nAs the Hypnotist, you can prevent all players from reporting bodies by using your ability (shapeshift/pet).",
