--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4086,6 +4086,12 @@
   "PostmanDone": "\\n\\n<color=#00ff00>You're done delivering messages!\\nYou'll win with the winning team at the end.</color>",
   "PostmanTarget": "<color=#00ffa5>Target:</color> <b>{0}</b>",
   "DeliverCooldown": "Deliver Cooldown",
+  "NecroGuesser": "Necro-Guesser",
+  "NecroGuesserInfo": "Guess Dead Players' Roles",
+  "NecroGuesserInfoLong": "(Neutrals):\\nAs the Necro-Guesser, your job is to guess the roles of dead players. Use <b>/bt {id} {role}</b> to guess. {id} is the player's ID, biew them by using /id, {role} is the player's role. You need to guess a certain amount of dead players' roles to win with the winning team at the end.",
+  "NecroGuesser.NumGuessesToWin": "Number of Guesses Required to Win",
+  "NecroGuesser.GuessCorrect": "Your guess was <#00ff00>correct</color>!",
+  "NecroGuesser.GuessIncorrect": "Your guess was <#ff0000>incorrect</color>!",
   "Reckless": "Reckless",
   "RecklessInfo": "Avoid Meetings at all cost",
   "RecklessInfoLong": "(Neutral):\\nAs the Reckless, your cooldown decreases with each kill you get. However, this isn't permanent. Your kill cooldown resets back to its default value at every meeting.",
