--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2323,6 +2323,7 @@
   "CommandDescription.EnableAllRoles": "Enables all roles and add-ons (⚠ freezes the game for a few seconds ⚠)",
   "CommandDescription.Achievements": "See which achievements you have unlocked and which you haven't",
   "CommandDescription.DeathNote": "Guess someone's real name as the Note Killer.",
+  "CommandDescription.Whisper": "Whisper a message to a player.",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2390,6 +2391,8 @@
   "CommandArgs.Unmute.Id": "The player's ID to unmute",
   "CommandArgs.Draft.Number": "The number of the role to choose",
   "CommandArgs.DeathNote.Name": "The real name to guess. If it's correct, you kill the player with this name.",
+  "CommandArgs.Whisper.Id": "The player's ID to whisper to",
+  "CommandArgs.Whisper.Message": "The message to whisper",
   "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
   "PollResultTitle": "Poll Results",
   "Poll.Title": "<#ff0000>➡ POLL ⬅</color>",
@@ -2408,6 +2411,9 @@
   "PlayerUnmuted": "You've successfully unmuted {0}.",
   "YouUnmuted": "{0} has unmuted you.",
   "MuteMessage": "<#ff0000>You're muted and cannot send messages. The mute will expire in <#ffff00>{0}</color> seconds.</color>",
+  "WhisperTitle": "{0} whispers to you:",
+  "DisableWhisperCommand": "Disable /whisper command",
+  "WhisperDisabled": "<#ff0000>X</color> The /whisper command is disabled in this lobby.",
   "ThankYouForUsingEHR": "Thank you for using EHR!",
   "GMRoles": "<color=#ff5b70>【 ★ Roles ★ 】</color>",
   "ImpostorRoles": "【 ★ Impostor Roles ★ 】",
