role list maker changes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1279,10 +1279,6 @@
   "HasSidekick": "Has <color=#00b4eb>Sidekick</color>",
   "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
   "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
-  "NonNeutralKillingRolesMinPlayer": "<color=#00ffff>Minimum</color> amount of <color=#ffff00>Non-Killing</color> <color=#ffab1b>Neutrals</color>",
-  "NonNeutralKillingRolesMaxPlayer": "<color=#00a5ff>Maximum</color> amount of <color=#ffff00>Non-Killing</color> <color=#ffab1b>Neutrals</color>",
-  "NeutralKillingRolesMinPlayer": "<color=#00ffff>Minimum</color> amount of <color=#ffab1b>Neutral</color> <color=#ff0000>Killers</color>",
-  "NeutralKillingRolesMaxPlayer": "<color=#00a5ff>Maximum</color> amount of <color=#ffab1b>Neutral</color> <color=#ff0000>Killers</color>",
   "CovenRolesMinPlayer": "Minimum Amount of <color=#8e44ad>Coven</color> members",
   "CovenRolesMaxPlayer": "Maximum Amount of <color=#8e44ad>Coven</color> members",
   "ImpKnowAlliesRole": "<color=#ff1919>Impostors</color> know the roles of other <color=#ff1919>Impostors</color>",
@@ -4321,6 +4317,8 @@
   "ShifterInfoLong": "(Neutrals):\\nAs the Shifter, you must steal someone's role by using your kill button near them. Depending on the settings, you may also steal their progress in their role and ability uses.\\nIf you have this role when the game ends, you lose!",
   "TryChangeBasis": "Try Changing Role Basis <#ffff00>(EXPERIMENTAL)</color>",
   "ShifterKillButtonText": "Shift Role",
+  "Shifter.CanBeKilled": "<#777777>Shifter</color> Can Be Killed",
+  "Shifter.CanBeVoted": "<#777777>Shifter</color> Can Be Voted",
   "Tremor": "Tremor",
   "TremorInfo": "When Doom Happens, Everyone is Doomed",
   "TremorInfoLong": "(Neutral):\\nAs the Tremor, you see a timer below your name indicating when doom happens. When you kill, the timer decreases. If doom happens, you kill everyone that comes near you, and you have a specified amount of time to kill everyone, otherwise you suicide.",
