--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -109,6 +109,10 @@
   "RoleSubCategoryLimitOptions.Neutral_Benign.Max": "Maximum Neutral Benign Roles",
   "RoleSubCategoryLimitOptions.Neutral_Killing.Min": "Minimum Neutral Killing Roles",
   "RoleSubCategoryLimitOptions.Neutral_Killing.Max": "Maximum Neutral Killing Roles",
+  "FactionLimits.Impostor.Min": "<#00ffa5>Minimum</color> <#ffffff>amount of</color> Impostor Roles",
+  "FactionLimits.Impostor.Max": "<#00a5ff>Maximum</color> <#ffffff>amount of</color> Impostor Roles",
+  "FactionLimits.Neutral.Min": "<#00ffa5>Minimum</color> <#ffffff>amount of</color> Neutral Roles",
+  "FactionLimits.Neutral.Max": "<#00a5ff>Maximum</color> <#ffffff>amount of</color> Neutral Roles",
   "CTA.TeamEnabled.Prefix": "Enable ",
   "CTA.TeamEnabled.Suffix": " ",
   "CTA.KnowRoles": "Players Know Each Others' Roles",
@@ -2192,7 +2196,7 @@
   "killAttacker": "On Kill Attempt, Kill The Attacker",
   "CrewpostorLungeKill": "Lunge on Kills",
   "CrewpostorKillAfterTask": "Amount of Task Completions Required to make 1 Kill",
-  "SpeedrunnerHasXTasksLeft": "<size=80%><#ffff44>{0} is the <color=#800080>Speedrunner</color>! They have <color=#800080>{1}</color> task(s) left.</color></size>",
+  "SpeedrunnerHasXTasksLeft": "<size=80%><#ffff44>{0} is the <color=#800080>Speedrunner</color> with <color=#800080>{1}</color> task(s) left!</color></size>",
   "SpeedrunnerSpeed": "<color=#800080>Speedrunner</color> Speed",
   "Message.SetToSeconds": "Set to <b>{0}</b> seconds.",
   "Message.MessageWaitHelp": "Specify the first argument in seconds.",
@@ -2407,7 +2411,7 @@
   "PlayerUnmuted": "You've successfully unmuted {0}.",
   "YouUnmuted": "{0} has unmuted you.",
   "MuteMessage": "<#ff0000>You're muted and cannot send messages. The mute will expire in <#ffff00>{0}</color> seconds.</color>",
-  "WhisperTitle": "{0} whispers to you:",
+  "WhisperTitle": "{0} <#ffffff>(ID <#00ffa5>{1}</color>) whispers to you:</color>",
   "DisableWhisperCommand": "Disable /whisper command",
   "WhisperDisabled": "<#ff0000>X</color> The /whisper command is disabled in this lobby.",
   "ThankYouForUsingEHR": "Thank you for using EHR!",
@@ -2764,7 +2768,8 @@
   "DisabledByProgram": "Public rooms have been disabled by the program",
   "EnterVentToWin": "Enter a Vent to Ignite!",
   "EatenByPelican": "You're swallowed, waiting for the Pelican to die or a meeting",
-  "KBBackCountDown": "Wait for <b>{0}</b> seconds to revive",
+  "KBBackCountDown": "<#ff0000>DEAD</color>\\n<#ffffff>Respawning in <#ffff00>{0}</color> seconds to revive</color>\\n\\n",
+  "SoloKombat.WinnersKillCount": "They got <color=#ffffff>{0}</color> kills!",
   "FireworksPutPhase": "{0} Fireworks Left",
   "FireworksWaitPhase": "Wait for it...",
   "FireworksReadyFirePhase": "Fire!",
@@ -4544,6 +4549,16 @@
   "AllInOne.RoomRush.Integration": "Integrate <#ffab1b>Room Rush</color>",
   "AllInOne.SoloKombat.Integration": "Integrate <#f55252>Solo PVP</color>",
   "AllInOne.Speedrun.Integration": "Integrate <#800080>Speedrun</color>",
+  "AllInOne.HotPotato.TimerMultiplier": "Hot Potato - Timer Multiplier",
+  "AllInOne.MoveAndStop.MinGreenTimeBonus": "Stop And Go - Minimum Green Time Bonus",
+  "AllInOne.MoveAndStop.MaxGreenTimeBonus": "Stop And Go - Maximum Green Time Bonus",
+  "AllInOne.NaturalDisasters.DisasterSpawnCooldownMultiplier": "Natural Disasters - Disaster Spawn Cooldown Multiplier",
+  "AllInOne.NaturalDisasters.WarningDurationMultiplier": "Natural Disasters - Warning Duration Multiplier",
+  "AllInOne.RoomRush.TimeLimitMultiplier": "Room Rush - Time Limit Multiplier",
+  "AllInOne.RoomRush.DontKillLastPlayer": "Room Rush - Don't Kill The Last Player to Enter the Correct Room",
+  "AllInOne.RoomRush.DontLowerTimeLimitWhenTwoPlayersEnterCorrectRoom": "Room Rush - Don't Lower Time Limit When the First Two Players Enter the Correct Room",
+  "AllInOne.RoomRush.DontKillPlayersOutsideRoomWhenTimeRunsOut": "Room Rush - Don't Kill Players Outside the Room When the Time Runs Out",
+  "AllInOne.Speedrun.TimeLimitMultiplier": "Speedrun - Time Limit Multiplier",
   "HideAndSeek": "HIDE AND SEEK",
   "ModeHideAndSeek": "Gamemode: Hide And Seek",
   "ModeDescribe.HideAndSeek": "In the Hide And Seek gamemode, seekers have to kill all hiders, while hiders have to complete all tasks without being killed in order to win.\\nIf the time limit reaches 0, hiders win.\\n\\nRoles: Hider, Seeker, Fox, Troll, Jumper, Detector, Jet, Dasher, Locator, Venter, Agent, Taskinator",
