more and more fixes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3385,9 +3385,7 @@
   "DynamoInfo": "You get faster by walking",
   "DynamoInfoLong": "(Add-ons):\\nAs the Dynamo, you get faster by walking. The longer you walk, the faster you get. Stopping will reset your speed.",
   "Prefix.Dynamo": "Dynamo",
-  "Dynamo.IncreaseSpeedBy": "Increase Speed by",
-  "Dynamo.IncreaseSpeedFrequency": "Speed Increase Frequency",
-  "Dynamo.MaxSpeed": "Max Speed",
+  "DynamoSuffix": "Dynamo: {0}% Charge",
   "Samurai": "Samurai",
   "SamuraiInfo": "Kill Players in Unique Ways",
   "SamuraiInfoLong": "(Neutrals):\\nAs the Samurai, you can do delayed kills and normal kills. What decides? Well, if you click your kill button on someone (the kill won't occur immediately) and you stay near them for a few seconds (like an arsonist douse), you get a lower kill cooldown and the kill will be delayed. If you fail to stay near them, you do a normal kill, lunge included.",
