--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2247,6 +2247,7 @@
   "Warning.MismatchedVersion": "<b>{0}</b> has a different version than <b>{1}</b>",
   "Warning.AutoExitAtMismatchedVersion": "The host has no or a different version of {0}\\nYou will be kicked in {1}",
   "EnabledGMWarning": "You have enabled Game Master. This will make you a ghost at the start of every game. Due to an unknown issue, games may end with the 'Everyone died' reason instantly, if this happens, please disable Game Master.",
+  "ModdedServerDoesntSupportCNOMessage": "⚠ <b>WARNING</b> ⚠\\nYou have enabled a game mode that requires custom net objects (fortegreen players) to show some pixel art to vanilla (non-modded) players. The current server you are using is modded (MNA/MEU/MAS), which doesn't support this. Please use another game mode (we have plenty that don't require custom net objects) or switch to another server (e.g. North America, Europe, Asia).",
   "Commands.NoAccess": "You don't have access to this command or cannot use it currently",
   "CommandDescription.LT": "View the lobby timer",
   "CommandDescription.Dump": "Dumps the log file to the desktop",
@@ -4725,7 +4726,6 @@
   "Negotiator.FinishNotify": "<#00ffa5>Your target chose to</color> {0}",
   "Negotiator.TargetMessage": "<b><u>The Negotiator forced you to pick one of the following options (use <b>/neg {index}</b>, replacing {index} with the number shown before the option you want, e.g. <b>/neg 1</b>), or you die:</u></b>\\n<size=80%>",
   "Negotiator.Title": "<#ffff00>⚠ Negotiator ⚠</color>",
-  "Negotiator.TargetPickSuccess": "You've chosen to <b>{0}</b>",
   "Commander": "Commander",
   "CommanderInfo": "Command your team",
   "CommanderInfoLong": "(Impostors):\\nAs the Commander, you can switch between 6 modes by venting/petting. You can execute the selected action by shapeshifting.<size=70%>\\n\\n<b><u>Mark:</u></b> Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\n<b><u>Whistle:</u></b> This tells all or 1 specific<sup>*</sup> impostor(s) to come to you and gives them (each) an arrow pointing towards you.\\n\\n<b><u>Kill Anyone:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to kill anyone.\\n\\n<b><u>Leave Player Alive:</u></b> Shapeshifting into a crewmate marks that player with a unique color and text telling other impostors to not kill that player. Shapeshifting into an impostor tells that impostor to not kill anyone.\\n\\n<b><u>Don't Sabotage:</u></b> Notifies all impostors to not call any sabotage.\\n\\n<b><u>Use Ability:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to use their ability.\\n\\n<size=60%><sup>*</sup> If you shapeshift into an impostor, the action executes specifically and only on them.</size></size>",
