some fixes & additions

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2658,6 +2658,10 @@
   "Achievement.CommonEnemyNo1.Description": "Win as any Neutral Killer role",
   "Achievement.CoordinatedAttack.Description": "As Jester, Executioner or Innocent, win with any of the other 2 roles",
   "Achievement.ItsJustAPrankBro.Description": "As Bomber, kill half of the lobby in 1 bomb",
+  "SpectateCommand.WasSpectatingLastRound": "<#ff0000>X</color> You were spectating last round. You can't spectate again.",
+  "SpectateCommand.AlreadySpectating": "<#ff0000>X</color> You are already spectating for the next game.",
+  "SpectateCommand.Success": "<#00ff00>✓</color> You are now spectating for the next game.",
+  "ReadyClientsInfo": "\\nReady clients: {0} (Timeout in {1}s)",
   "Vision": "Vision",
   "Outside": "Outside",
   "UnsupportedVersion": "Unsupported Among Us version.\\nPlease update Among Us.",
