--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2324,6 +2324,7 @@
   "CommandDescription.Achievements": "See which achievements you have unlocked and which you haven't",
   "CommandDescription.DeathNote": "Guess someone's real name as the Note Killer.",
   "CommandDescription.Whisper": "Whisper a message to a player.",
+  "CommandDescription.Spectate": "Makes you a spectator for the next game. You should just enable Game Master as the host.",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -4079,7 +4080,7 @@
   "GuessBackstabber": "You cannot guess a revealed Backstabber.",
   "Curser": "Curser",
   "CurserInfo": "Make Others' Life Worse",
-  "CurserInfoLong": "(Neutrals):\\nAs the Curser, when you use your kill button on someone, they will get one of the following:<size=80%>\\n- -1 ability use\\n- +1 harmful add-on\\n- permanent low vision\\n- permanent low speed</size>\\nYou win if crewmates lose.",
+  "CurserInfoLong": "(Neutrals):\\nAs the Curser, when you use your kill button on someone, you can single click on them to reveal their alignment, and double click to give them one of the following effects:<size=80%>\\n- -1 ability use\\n- +1 harmful add-on\\n- permanent low vision\\n- permanent low speed</size>\\nYou win if crewmates lose.",
   "Curser.LowerVision": "Permanent Lower Vision",
   "Curser.LowerSpeed": "Permanent Lower Speed",
   "Curser.Notify.0": "You've removed an ability use from your target",
