--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1207,6 +1207,7 @@
   "ReadyCheckTitle": "<#ffff00>★ Ready Check ★</color>",
   "EveryoneReadyTitle": "<#00ff00>Everyone is ready!</color>",
   "PlayersNotReadyTitle": "<#ffff00><#ffab1b>{0}</color> players are not ready!</color> They are:",
+  "SpectatorsList": "<#888888>The following </color>{0}<#888888> players are spectating:</color>",
   "ShieldPersonDiedFirst": "Shield the person who got killed first in the last game",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
   "SidekickCanKillSidekick": "<color=#00b4eb>Sidekicks</color> can kill other <color=#00b4eb>Sidekicks</color>",
