--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -7,6 +7,7 @@
   "Icon": "♥",
   "NameColor": "#00ffa5",
   "Server": "<#00ffa5>Server:</color> <b>{0}</b>",
+  "SubText.GM": "Spectate the chaos!",
   "SubText.Crewmate": "Find and exile the <color=#ff1919>Impostors</color>",
   "SubText.Impostor": "Sabotage and kill everyone",
   "SubText.Neutral": "A team on their own",
@@ -1207,6 +1208,7 @@
   "ReadyCheckTitle": "<#ffff00>★ Ready Check ★</color>",
   "EveryoneReadyTitle": "<#00ff00>Everyone is ready!</color>",
   "PlayersNotReadyTitle": "<#ffff00><#ffab1b>{0}</color> players are not ready!</color> They are:",
+  "SpectatorsList": "<#888888>The following </color>{0}<#888888> players are spectating:</color>",
   "ShieldPersonDiedFirst": "Shield the person who got killed first in the last game",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
   "SidekickCanKillSidekick": "<color=#00b4eb>Sidekicks</color> can kill other <color=#00b4eb>Sidekicks</color>",
