--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1022,6 +1022,8 @@
   "SwitchVanilla": "Switch Vanilla",
   "FastBoot": "Quick Start Mode",
   "UnlockFPS": "Unlock FPS",
+  "ShowFPS": "Show FPS",
+  "FPSGame": "FPS: ",
   "ForceOwnLanguage": "Force mod to use your language if possible",
   "ForceOwnLanguageRoleName": "Force role names in your language if possible",
   "GodMode": "God Mode",
@@ -1213,6 +1215,7 @@
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
   "SidekickCanKillSidekick": "<color=#00b4eb>Sidekicks</color> can kill other <color=#00b4eb>Sidekicks</color>",
   "LegacyMafia": "Use Legacy Version",
+  "LegacyTraitor": "Use Legacy Version",
   "AsthmaticMinRedTime": "Minimum Red Time",
   "AsthmaticMaxRedTime": "Maximum Red Time",
   "AsthmaticMinGreenTime": "Minimum Green Time",
