--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1016,7 +1016,7 @@
   "KPDCamouflageMode": "Camouflage Appearance",
   "RoleOptions": "Role Options",
   "ModeOptions": "Mode Options",
-  "AutoStart": "Auto start at full lobby",
+  "AutoStart": "Auto Start",
   "EnableCustomButton": "Enable Custom Button Images",
   "EnableCustomSoundEffect": "Enable Custom Sound Effects",
   "SwitchVanilla": "Switch Vanilla",
