--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4758,6 +4758,7 @@
   "Negotiator.LowVision": "Low vision",
   "Negotiator.LowSpeed": "Low speed",
   "Negotiator.MinVotingTimeLeftToNegotiate": "Minimum Voting Time Left to Negotiate",
+  "Negotiator.TargetPickSuccess": "You've chosen to <b>{0}</b>",
   "Negotiator.Type.Suicide": "Suicide",
   "Negotiator.Type.HarmfulAddon": "Receive a Harmful Add-on",
   "Negotiator.Type.LowVision": "Get Permanent low vision",
