--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1680,6 +1680,7 @@
   "KB_BootVentWhenDead": "Boot players who get stuck in the vent (may trigger official anti cheating)",
   "JudgeTryHideMsg": "Hide <color=#f8d85a>Judge</color>'s commands",
   "TrialLimitPerMeeting": "Max Trials per Meeting",
+  "TrialLimitPerGame": "Max Trials per Game",
   "JudgeCanTrialMadmate": "Can trial <color=#ff1919>Madmates</color>",
   "JudgeCanTrialConverted": "Can trial <#ffab1b>Converted</color> players",
   "VeteranSkillMaxOfUseage": "(Initial) Max number of Alerts",
@@ -3354,6 +3355,8 @@
   "Ankylosaurus": "Ankylosaurus",
   "AnkylosaurusInfo": "You're an Ankylosaurus.... I guess",
   "AnkylosaurusInfoLong": "(Crewmates):\\nAs the Ankylosaurus, you cannot be guessed, your movement is slower, you have a lower vision, and you have multiple lives.",
+  "Ankylosaurus.Speed": "<#7fe44c>Ankylosaurus</color> Speed",
+  "Ankylosaurus.Lives": "Maximum Lives",
   "Hypnotist": "Hypnotist",
   "HypnotistInfo": "Prevent Body Reports",
   "HypnotistInfoLong": "(Impostors):\\nAs the Hypnotist, you can prevent all players from reporting bodies by using your ability (shapeshift/pet).",
@@ -4906,6 +4909,7 @@
   "InquirerInfo": "Check Players' Roles",
   "InquirerInfoLong": "(Crewmates):\\nAs the Inquirer, you can check if a player has a specific role by typing /check {player id} {role}. There's a fail chance.",
   "Inquirer.FailChance": "Chance to Show Incorrect Result",
+  "Inquirer.AbilityUseLimit": "Initial Ability Use Limit",
   "Inquirer.MessageTrue": "<#00ff00><b><u>Correct!</u></b></color> That player has the role you entered.",
   "Inquirer.MessageFalse": "<#ff0000><b><u>Incorrect!</u></b></color> That player does not have the role you entered.",
   "Freezer": "Freezer",
